# Bern_pipecat

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
esp32-m5stack-atoms3r/: CMakeLists.txt  sdkconfig.defaults
esp32-m5stack-atoms3r/src/: CMakeLists.txt  idf_component.yml  main.cpp  media.cpp  rtvi.cpp
esp32-m5stack-cores3/: sdkconfig.defaults
esp32-m5stack-cores3/src/: CMakeLists.txt  http.cpp  idf_component.yml  main.cpp  main.h  media.cpp  rtvi_callbacks.cpp  webrtc.cpp
esp32-s3-box-3/: CMakeLists.txt
esp32-s3-box-3/components/peer/: CMakeLists.txt
esp32-s3-box-3/src/: CMakeLists.txt  http.cpp  idf_component.yml  main.cpp  main.h  media.cpp  rtvi.cpp  screen.cpp  webrtc.cpp  wifi.cpp
src/: idf_component.yml  main.h  media.cpp  webrtc.cpp
